objects/Account.object
<CustomObject>
    <fields>
        <fullName>i__LastMailSent__c</fullName>
        <description>Time of the most recent email sent or received by this Account</description>
        <label>Last Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailTimeDelta__c</fullName>
        <description>Difference, in days, between the time the last outbound email was sent and the time the last inbound email was received</description>
        <formula>i__LastOutboundSent__c - i__LastInboundSent__c</formula>
        <label>Last Mail Time Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastMailTime__c</fullName>
        <description>obsolete - use LastMailSent__c</description>
        <formula>i__LastMailSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email to or from this Account</description>
        <label>Last Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Accounts (Last Email)</relationshipLabel>
        <relationshipName>LastEmailForAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent to this Account</description>
        <label>Last Outbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Accounts (Last Outbound Email)</relationshipLabel>
        <relationshipName>LastOutboundEmailForAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundSent__c</fullName>
        <description>Time of the most recent email sent to this Account</description>
        <label>Last Outbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundTime__c</fullName>
        <description>obsolete - use LastOutboundSent__c</description>
        <formula>i__LastOutboundSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Active_Accounts</fullName>
        <columns>Active__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Location_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>MDM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Nihar</value>
        </filters>
        <label>Active Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Distribution_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FS_CUST_ID__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FS_Site_ID__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>CD</value>
        </filters>
        <label>All Distribution Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Distribution_Key_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FS_CUST_ID__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FS_Site_ID__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBU__c</field>
            <operation>equals</operation>
            <value>CD</value>
        </filters>
        <filters>
            <field>Key_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Distribution Key Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BillToAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <label>Bill To Accounts</label>
    </listViews>
    <listViews>
        <fullName>Enitor</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Customer_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Customer_Group__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>MDM_External_ID__c</columns>
        <columns>FS_CUST_ID__c</columns>
        <columns>FS_Ship_To_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Site_ID__c</field>
            <operation>contains</operation>
            <value>Enitor</value>
        </filters>
        <label>Enitor</label>
    </listViews>
    <listViews>
        <fullName>FPT</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Customer_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Customer_Group__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>MDM_External_ID__c</columns>
        <columns>FS_CUST_ID__c</columns>
        <columns>FS_Ship_To_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Site_ID__c</field>
            <operation>contains</operation>
            <value>FPT</value>
        </filters>
        <label>FPT</label>
    </listViews>
    <listViews>
        <fullName>Filters</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Customer_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Customer_Group__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>MDM_External_ID__c</columns>
        <columns>FS_Site_ID__c</columns>
        <columns>Business_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Segment__c</field>
            <operation>contains</operation>
            <value>Filters</value>
        </filters>
        <label>Filters</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Nihar Pa</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>Customer_Group__c</columns>
        <columns>Customer_Type__c</columns>
        <columns>Business_Segment__c</columns>
        <columns>FS_Site_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>MDM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Packaging_Solutions</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Customer_Type__c</columns>
        <columns>Business_Segment__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Customer_Group__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>MDM_External_ID__c</columns>
        <columns>FS_CUST_ID__c</columns>
        <columns>FS_Ship_To_ID__c</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_Site_ID__c</field>
            <operation>contains</operation>
            <value>Payne</value>
        </filters>
        <filters>
            <field>FS_Site_ID__c</field>
            <operation>notContain</operation>
            <value>Payne Security</value>
        </filters>
        <label>Packaging Solutions</label>
    </listViews>
    <listViews>
        <fullName>Shipment_Location_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_Type__c</field>
            <operation>equals</operation>
            <value>Shipment Location</value>
        </filters>
        <label>Shipment Location Accounts</label>
    </listViews>
    <listViews>
        <fullName>inactive_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>inactive Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Account_Read_Only</fullName>
        <active>true</active>
        <label>Key Account - Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_account</fullName>
        <active>true</active>
        <label>Key account</label>
    </recordTypes>
    <recordTypes>
        <fullName>None_key_account</fullName>
        <active>true</active>
        <label>None key account</label>
    </recordTypes>
    <recordTypes>
        <fullName>None_key_account_Read_Only</fullName>
        <active>true</active>
        <label>None key account - Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Account_Type</fullName>
        <active>true</active>
        <description>Parent Account Type</description>
        <label>Parent Account Type</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Currency_change_when_Read_Only</fullName>
        <active>false</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName,&quot;Read_Only&quot;), ISCHANGED(  CurrencyIsoCode  ))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Account Currency may not be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Name_change_when_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName,&quot;Read_Only&quot;)
, ISCHANGED( Name ),
NOT($Profile.Name=&quot;System Administrator&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name may not be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Duplicate_MDM_External_ID</fullName>
        <active>false</active>
        <errorConditionFormula>PRIORVALUE(MDM_External_ID__c)  =  MDM_External_ID__c
 &amp;&amp; 
 NOT( ISNEW() )</errorConditionFormula>
        <errorDisplayField>MDM_External_ID__c</errorDisplayField>
        <errorMessage>Current  and Previous can not be same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_MDM_External_ID_if_FSSite_ID_known</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( MDM_External_ID__c ) ,NOT( ISBLANK( FS_Site_ID__c )), NOT(SBU__c=&apos;CD&apos;))</errorConditionFormula>
        <errorMessage>You can not change the MDM External ID after an update was received from the MDM. We know that because the FS Site ID is set. Only SysAdmin or Divisional Super users can change this field now</errorMessage>
    </validationRules>
</CustomObject>